--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    color: white;
+    max-width: 100vw;
 }
 
 .nav {
@@ -13,12 +13,14 @@ body {
 }
 
 .btn {
-    color: white;
     background: none;
     border: none;
 }
 
+/* first page style */
+
 #first-page {
+    color: white;
     height: 100vh;
     width: 100vw;
     background: url(/img/model-3-main-hero-a-desktop.jpg) no-repeat center center/cover;
@@ -27,6 +29,7 @@ body {
 }
 
 #first-page header {
+    position: fixed;
     height: 7vh;
     width: 100vw;
     display: flex;
@@ -36,8 +39,9 @@ body {
 }
 
 #logo {
+    color: white;
     width: 5%;
-    font-size: 2rem;
+    margin-left: 20px;
 }
 
 #main-nav {
@@ -47,6 +51,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-left: 40px;
 }
 
 #main-nav li {
@@ -55,6 +60,7 @@ body {
 }
 
 .nav-btn {
+    color: white;
     width: 80px;
 }
 
@@ -91,7 +97,7 @@ body {
 }
 
 .box{
-    margin: 30px;
+    margin: 0 40px 60px;
 }
 
 #first-page footer {
@@ -101,6 +107,70 @@ body {
     justify-content: center;
 }
 
-#first-page footer button {
-    
+.order-btn {
+    border: white solid 3px;
+    padding: 10px 70px;
+    border-radius: 20px;
+}
+
+.order-btn-primary {
+    border-color: white;
+}
+
+.order-btn-secondary {
+    border-color: black;
+    color: black;
+}
+
+/* second page style */
+
+#second-page {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: row;
+}
+
+#second-page main {
+    width: 75vw;
+    height: 100vh;
+    background: url(/img/model-3-hero-a-desktop.jpg) no-repeat center center/cover;
+}
+
+#second-page article {
+    height: 100vh;
+    width: 25vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#second-page #top {
+    width: 100%;
+    height: 80%;
+    margin-top: 2rem;
+    padding: 5px;
+}
+
+#second-page #top #bold {
+    font-weight: 600;
+}
+
+#second-page #bottom {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 80px;
+    justify-content: center;
+}
+
+#second-page #learn-more {
+    border: 2px black solid;
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+    margin: 4px;
+}
+
+#second-page #bottom p {
+    font-size: 0.7rem;
 }
