--- a/styles/style.css
+++ b/styles/style.css
@@ -2,14 +2,25 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
+
+@font-face {
+    font-family: "gothamSSm";
+    src: url(https://cdn-design.tesla.com/tds-fonts/3.x/woff2/GothamSSm-Light_Web.woff2)
+    format("woff2");
+    /* font-weight: "light"; */
+  }
 
 body {
     max-width: 100vw;
+    font-family: "gothamSSm";
 }
 
 .nav {
     list-style: none;
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .btn {
@@ -17,12 +28,16 @@ body {
     border: none;
 }
 
+.btn:hover {
+    cursor: pointer;
+}
+
 /* first page style */
 
 #first-page {
     color: white;
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
     background: url(/img/model-3-main-hero-a-desktop.jpg) no-repeat center center/cover;
     display: flex;
     flex-direction: column;
@@ -46,7 +61,7 @@ body {
 
 #main-nav {
     height: 100%;
-    width: 40%;
+    width: 80%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -57,6 +72,7 @@ body {
 #main-nav li {
     margin: 5px;
     padding: 3px;
+    min-width: 80px;
 }
 
 .nav-btn {
@@ -97,7 +113,46 @@ body {
 }
 
 .box{
-    margin: 0 40px 60px;
+    margin: 0px 3px;
+    width: 9vw;
+    height: 10vh;
+}
+
+#first-page .first-box {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    margin-right: 11px;
+}
+
+.tcl-badge-speedometer__needle {
+    left: 18px;
+    top: 3px;
+    /* transform-origin: 0 0;
+    transform: rotate(90deg);
+    transition: transform 1s ease;  */
+}
+
+.tcl-badge-speedometer__inner-circle {
+    opacity: 0.2;
+    left: 5px;
+    top: 2px;
+}
+
+#first-page .first-box .barometer-words {
+    width: 70%;
+    height: 50%;
+}
+
+#first-page .first-box .svg-barometer {
+    position: relative;
+    width: 30%;
+    height: 50%;
+}
+
+#first-page .first-box .svg-barometer svg {
+    position: absolute;
 }
 
 #first-page footer {
@@ -115,6 +170,7 @@ body {
 
 .order-btn-primary {
     border-color: white;
+    color: white;
 }
 
 .order-btn-secondary {
@@ -126,7 +182,7 @@ body {
 
 #second-page {
     height: 100vh;
-    width: 100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: row;
 }
