--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,11 @@ body {
     font-family: "gothamSSm";
 }
 
+.box-2 {
+    margin-left: 5px;
+    margin-top: 10px;
+}
+
 .nav {
     list-style: none;
     font-size: 14px;
@@ -118,7 +123,7 @@ body {
     height: 10vh;
 }
 
-#first-page .first-box {
+.first-box {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
@@ -140,18 +145,18 @@ body {
     top: 2px;
 }
 
-#first-page .first-box .barometer-words {
+.first-box .barometer-words {
     width: 70%;
     height: 50%;
 }
 
-#first-page .first-box .svg-barometer {
+.first-box .svg-barometer {
     position: relative;
     width: 30%;
     height: 50%;
 }
 
-#first-page .first-box .svg-barometer svg {
+.first-box .svg-barometer svg {
     position: absolute;
 }
 
@@ -219,7 +224,7 @@ body {
     justify-content: center;
 }
 
-#second-page #learn-more {
+#learn-more {
     border: 2px black solid;
     border-radius: 50%;
     width: 2rem;
@@ -229,4 +234,48 @@ body {
 
 #second-page #bottom p {
     font-size: 0.7rem;
+}
+
+/* third-page */
+
+#third-page {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+#third-page main {
+    color: white;
+    height: 76%;
+    width: 100%;
+    background: url(/img/lhd-performance-hero-desktop.jpg) no-repeat center center/cover;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+#third-page footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+#third-page footer .performance-and-order {
+    line-height: 8px;
+    display: flex;
+    flex-direction: column;
+}
+
+#third-page footer .describe {
+    width: 40vw;
+    margin: 5vh;
+}
+
+#third-page #bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
