--- a/styles/style.css
+++ b/styles/style.css
@@ -13,8 +13,12 @@
   }
 
 body {
-    max-width: 100vw;
+    /* width: 100vw; */
     font-family: "gothamSSm";
+}
+
+a {
+    color: black;
 }
 
 .box-2 {
@@ -42,7 +46,7 @@ body {
 #first-page {
     color: white;
     height: 100vh;
-    max-width: 100vw;
+    width: 100%;
     background: url(/img/model-3-main-hero-a-desktop.jpg) no-repeat center center/cover;
     display: flex;
     flex-direction: column;
@@ -71,18 +75,25 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-left: 40px;
+    margin-left: 70px;
 }
 
 #main-nav li {
     margin: 5px;
     padding: 3px;
-    min-width: 80px;
 }
 
 .nav-btn {
     color: white;
-    width: 80px;
+    width: 90px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 13px;
+}
+
+.nav-btn:hover {
+    background: rgba(139, 137, 137, 0.719);
+    border-radius: 30px;
 }
 
 #side-nav {
@@ -91,7 +102,8 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+    margin-right: 40px;
 }
 
 #first-page main {
@@ -115,6 +127,13 @@ body {
     justify-content: center;
     height: 10%;
     width: 100%;
+    line-height: 2rem;
+}
+
+#detailes p {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
 }
 
 .box{
@@ -150,6 +169,15 @@ body {
     height: 50%;
 }
 
+.first-box {
+    position: relative;
+}
+
+.first-box .barometer-words p {
+    position: absolute;
+    left: 8px;
+}
+
 .first-box .svg-barometer {
     position: relative;
     width: 30%;
@@ -167,6 +195,10 @@ body {
     justify-content: center;
 }
 
+.fourth-box .order-btn {
+    margin-bottom: 40px;
+}
+
 .order-btn {
     border: white solid 3px;
     padding: 10px 70px;
@@ -178,23 +210,33 @@ body {
     color: white;
 }
 
+.order-btn-primary:hover {
+    background: white;
+    color: black;
+}
+
 .order-btn-secondary {
     border-color: black;
     color: black;
+}
+
+.order-btn-secondary:hover {
+    background: black;
+    color: white;
 }
 
 /* second page style */
 
 #second-page {
     height: 100vh;
-    max-width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
 }
 
 #second-page main {
-    width: 75vw;
-    height: 100vh;
+    width: 70%;
+    height: 100%;
     background: url(/img/model-3-hero-a-desktop.jpg) no-repeat center center/cover;
 }
 
@@ -218,10 +260,16 @@ body {
 }
 
 #second-page #bottom {
+    width: 100%;
     display: flex;
     flex-direction: row;
     margin-bottom: 80px;
     justify-content: center;
+}
+
+#second-page #bottom .order-btn {
+    text-align: center;
+    padding: 10px 50px;
 }
 
 #learn-more {
@@ -230,17 +278,23 @@ body {
     width: 2rem;
     height: 2rem;
     margin: 4px;
+    font-size: 1.2rem;
+}
+
+#learn-more:hover {
+    color: white;
+    background: black;
 }
 
 #second-page #bottom p {
-    font-size: 0.7rem;
+    margin-top: 10px;
 }
 
 /* third-page */
 
 #third-page {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -254,6 +308,21 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: flex-end;
+}
+
+#third-page main .box {
+    margin-bottom: 150px;
+    width: 20vw;
+    padding: 1rem;
+    margin-left: 1rem;
+}
+
+#third-page main .box h2 {
+    text-align: center;
+}
+
+#third-page main .first-box h2{
+    text-align: left;
 }
 
 #third-page footer {
@@ -278,4 +347,182 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width: 1220px) {
+
+    /* .tcl-badge-speedometer__needle {
+        left: 18px;
+        top: 3px;
+    }
+    
+    .tcl-badge-speedometer__inner-circle {
+        opacity: 0.2;
+        left: 5px;
+        top: 2px;
+    } */
+    
+    /* .first-box .barometer-words {
+        width: 70%;
+        height: 50%;
+    } */
+    
+    /* .first-box {
+        position: relative;
+    }
+    
+    .first-box .svg-barometer {
+        position: relative;
+        width: 30%;
+        height: 50%;
+    }
+    
+    .first-box .svg-barometer svg {
+        position: absolute;
+    } */
+
+    #main-nav {
+        display: none;
+    }
+
+    #side-nav {
+        width: 50%;
+        margin: 0;
+        justify-content: flex-end;
+    }
+
+    #detailes {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .barometer-words {
+        margin-left: 3px;
+    }
+
+    #first-page {
+        height: 100vh;
+        width: 100vw;
+    }
+
+    #third-page {
+        height: 100vh;
+        width: 100vw;
+    }
+
+    #second-page {
+        flex-direction: column;
+        align-items: flex-start;
+        height: 100vh;
+        width: 100vw;
+    }
+
+    #second-page main {
+        width: 100%;
+        height: 50%;
+    }
+
+    #second-page article h1 {
+        font-size: 1.2rem;
+    }
+
+    #second-page article {
+        width: 100%;
+        height: 50%;
+        font-size: 0.8rem;
+    }
+
+    #second-page #bottom {
+        font-size: 0.65rem;
+    }
+
+    #third-page main{
+        width: 100%;
+        height: 50%;
+    }
+
+    #third-page #detailes {
+        justify-content: center;
+    }
+
+    #third-page footer {
+        width: 100%;
+        height: 50%;
+        flex-direction: column;
+    }
+
+    #third-page footer h1{
+        font-size: 1.3rem;
+    }
+
+    #third-page footer .describe {
+        width: 90vw;
+    }
+
+    #third-page footer .performance-and-order {
+        line-height: 13px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    #third-page main p{
+        display: none;
+    }
+
+    #third-page main {
+        justify-content: center;
+    }
+
+    #third-page main .box {
+        margin-bottom: 50px;
+        width: 25%;
+        padding: 1rem;
+        margin-left: 0.1rem;
+    }
+
+    #second-page .order-btn {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    #third-page .order-btn {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+
+    #first-page .order-btn {
+        width: 25vw;
+        padding: 3px 12px;
+        font-size: 0.7rem;
+        margin-right: 8px;
+    }
+
+    #first-page .first-box {
+        /* width: 30vw; */
+        margin-left: 2px;
+    }
+
+    #first-page .box {
+        width: 23vw;
+        margin: 0;
+    }
+
+    #first-page h2 {
+        font-size: 0.8rem;
+    }
+
+    #first-page p, #third-page .box-2,  #third-page .box, #third-page main p{
+        font-size: 0.6rem;
+    }
+
+    #first-page .box-2 {
+        width: 25vw;
+        margin: 0;
+    }
+
+    .first-box .barometer-words{
+        margin-left: 22px;
+    }
 }
